[project]
name = "proxen"
version = "0.8.8"
description = "Lightweight async LLM API proxy with concurrency control, telemetry, and a live dashboard."
requires-python = ">=3.12"
dependencies = [
    "blacksheep>=2.4",
    "msgspec>=0.18",
    "uvicorn[standard]>=0.32",
    "aiohttp>=3.10",
    "aiosqlite>=0.20",
    "brotli>=1.0",
]

[project.scripts]
proxen = "proxen.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "starlette>=0.40",
    "httpx>=0.27",
    "watchfiles>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.hatch.build.targets.wheel]
packages = ["proxen"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.setuptools.packages.find]
include = ["proxen*"]
